--- a/index.html
+++ b/index.html
@@ -37,11 +37,16 @@
 
 <ul>
 <li>ja_JP.work: 作業用ブランチ</li>
-<li>ja_JP: 翻訳済みブランチ
-となっています。</li>
-</ul><p>誤訳等あればPRなどでご指摘ください。</p>
+<li>ja_JP: 翻訳済みブランチ</li>
+</ul>
+<p>となっています。誤訳等あればPRなどでご指摘ください。</p>
 
 <p>最終的には <a href="https://github.com/yasuaki/git-doc-ja/">https://github.com/yasuaki/git-doc-ja/</a> にマージしていけたらと思います。</p>
+
+<p>翻訳済みドキュメントは以下の通りです</p>
+<ul>
+<li><a href="Documentation/gitworkflows.html">gitworkflows</a></li>
+</ul>
       </section>
     </div>
 
