--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 <ul>
 <li><a href="Documentation/gitworkflows.html">gitworkflows</a></li>
 </ul>
+<p>Copyright, ライセンスは原文(Git本体)と同一です。</p>
       </section>
     </div>
 
