--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
 <ul>
 <li>ja_JP.work: 作業用ブランチ</li>
-<li>ja_JP: 翻訳済みブランチ</li>
+<li>master: 翻訳済みブランチ</li>
+<li>git/master: upstream の master</li>
 </ul>
 <p>となっています。誤訳等あればPRなどでご指摘ください。</p>
 
