--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 <li>ja_JP.work: 作業用ブランチ</li>
 <li>master: 翻訳済みブランチ</li>
 </ul>
-<p>となっています。誤訳等あればPRなどでご指摘ください。</p>
+<p>となっています。誤訳等あれば ja_JP.work に対するPRなどでご指摘ください。
+原文と訳を比較する場合、 ja_JP.work ブランチのファイルが原文と訳の両方を
+含んでいるので比較が楽です。</p>
 
 <p>最終的には <a href="https://github.com/yasuaki/git-doc-ja/">https://github.com/yasuaki/git-doc-ja/</a> にマージしていけたらと思います。</p>
 
