--- a/Documentation/gitworkflows.html
+++ b/Documentation/gitworkflows.html
@@ -993,8 +993,8 @@ rebaseされるべきではありません。 <a href="git-rebase.html">git-reba
 <div class="content">
 <div class="paragraph"><p><code>git log master..maint</code></p></div>
 </div></div>
-<div class="paragraph"><p>このコマンドではコミットはひとつも列挙されるべきではありません。
-もし列挙されたら <em>master</em> をcheckoutし、 <em>maint</em> をそこにmergeします。</p></div>
+<div class="paragraph"><p>このコマンドではコミットはひとつもリストされるべきではありません。
+もしリストされたら <em>master</em> をcheckoutし、 <em>maint</em> をそこにmergeします。</p></div>
 <div class="paragraph"><p>これで機能リリースを作成作業を実行できるようになりました。
 <em>master</em> の先端にリリースバージョンであることを示すタグをつけます:</p></div>
 <div class="exampleblock">
@@ -1283,7 +1283,7 @@ mergeコンフリクトが発生するかもしれません。
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-02-08 22:19:30 JST
+Last updated 2014-02-16 06:47:37 JST
 </div>
 </div>
 </body>
