--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 <p>翻訳済みドキュメントは以下の通りです</p>
 <ul>
 <li><a href="Documentation/git-add.html">git-add</a></li>
+<li><a href="Documentation/git-branch.html">git-branch</a></li>
 <li><a href="Documentation/gitworkflows.html">gitworkflows</a></li>
 </ul>
 <p>Copyright, ライセンスは原文(Git本体)と同一です。</p>
