--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>Git-doc-ja_JP</title>
+    <script src="ga.js"></script>
   </head>
 
   <body>
