--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 <ul>
 <li><a href="Documentation/git-add.html">git-add</a></li>
 <li><a href="Documentation/git-branch.html">git-branch</a></li>
+<li><a href="Documentation/git-checkout.html">git-checkout</a></li>
 <li><a href="Documentation/gitworkflows.html">gitworkflows</a></li>
 </ul>
 <p>Copyright, ライセンスは原文(Git本体)と同一です。</p>
